name:                tyche
version:             0.0.0
homepage:            https://github.com/null-a/tyche#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Paul Horsfall
copyright:           Copyright (C) 2017 Paul Horsfall
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tyche.Prob
                     , Tyche.Dist
                     , Tyche.Model
                     , Tyche.Prelude
                     , Tyche.Inference.Enumerate
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/null-a/tyche
