name:                tyche
version:             0.0.0
homepage:            https://github.com/null-a/tyche#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Paul Horsfall
copyright:           Copyright (C) 2017 Paul Horsfall
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tyche.Prob
                     , Tyche.Dist
                     , Tyche.Random
                     , Tyche.Model
                     , Tyche.Prelude
                     , Tyche.Inference.Enumerate
                     , Tyche.Inference.LikelihoodWeighting
                     , Tyche.Inference.ParticleCascade
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1
                     , transformers >= 0.5.2.0
  default-language:    Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          TestMain.hs
  build-depends:    base >= 4.7 && < 5
                  , tyche
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/null-a/tyche
